@@ -35,6 +35,7 @@ requires 'Digest::MD5' => undef;
 requires 'XML::Simple' => undef;
 requires 'LWP' => undef;
 requires 'File::Temp' => undef;
+requires 'Linux::Ethtool::Settings'=>undef;
 recommends 'Net::IP' => undef;
 recommends 'Compress::Zlib';
 recommends 'Proc::Daemon' => undef;
@@ -46,7 +47,7 @@ install_script  'ocsinventory-agent';
 # We want a release bundled with the needed dependency to be able to
 # prepare a standalone binary with PAR::Packer 
 if ($ENV{OCS_BUNDLE_RELEASE}) {
-  foreach my $module (qw/Archive::Zip HTML::Parser LWP URI XML::NamespaceSupport Net::IP HTML::Tagset Proc::Daemon Module::ScanDeps PAR::Packer AutoLoader PAR PAR::Dist File::Remove YAML::Tiny Getopt::ArgvFile ExtUtils::Install ExtUtils::ParseXS XML::SAX XML::Simple/) {
+  foreach my $module (qw/Archive::Zip HTML::Parser LWP URI XML::NamespaceSupport Net::IP HTML::Tagset Proc::Daemon Module::ScanDeps PAR::Packer AutoLoader PAR PAR::Dist File::Remove YAML::Tiny Getopt::ArgvFile ExtUtils::Install ExtUtils::ParseXS XML::SAX XML::Simple Linux::Ethtool::Settings/) {
     bundle $module;
     requires $module;
   }
