@@ -1,4 +1,4 @@
-package Ocsinventory::Agent::Backend::OS::Generic::Lspci;
+package Ocsinventory::Agent::Backend::OS::Generic::Lsusb;
 use strict;
 
 sub check {can_run("lsusb")}
