@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * Retrieve the speed of network card
        * Add a new log message when unable to scan a SNMP devices in Snmp.pm
        * Fix problem fix IP address tests in Snmp.pm
        * Remove "-pP" option passed to nmap in Snmp.pm
